# Trace-lit-SDK

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REQUIREMENTS.md  STATUS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  publish-sdk.yml
api/: Dockerfile  pyproject.toml
api/server/: attribution.py  attribution_engine.py  auth.py  config.py  email.py  failures.py  main.py  models.py
api/server/db/: clickhouse.py  timescale.py
api/server/routes/: admin.py  agents.py  alerts.py  auth.py  costs.py  datasets.py  evals.py  failures.py  health.py  prompts.py  proxy.py  settings.py  traces.py
api/tests/: conftest.py  test_failures_classifier.py  test_routes.py
dashboard/: Dockerfile
dashboard/web/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/web/src/: App.tsx  styles.css
dashboard/web/src/api/: client.ts  hooks.ts
dashboard/web/src/components/: DAGView.tsx  Layout.tsx  SpanTimeline.tsx  ui.tsx
dashboard/web/src/pages/: Agents.tsx  Alerts.tsx  Costs.tsx  Datasets.tsx  Failures.tsx  Login.tsx  Overview.tsx  Prompts.tsx  Settings.tsx  Setup.tsx  Signup.tsx  TraceDetail.tsx  Traces.tsx  Verify.tsx
dashboard/web/src/types/: index.ts
dashboard/web/src/utils/: lineDiff.ts
eval/engine/: __init__.py  runner.py  scorers.py
examples/: fake_agent.py  quickstart.py  test_prompt_versioning.py
infra/: docker-compose.dev.yml  docker-compose.enterprise.yml  docker-compose.yml
infra/clickhouse/config/: keeper.xml  listen.xml  macros.xml
infra/init/clickhouse/: 001_init.sql
infra/init/timescale/: 001_init.sql
infra/nginx/: nginx.conf
ingestion/: Dockerfile  pyproject.toml
ingestion/pipeline/: api_keys.py  config.py  consumer.py  cost.py  dead_letter.py  main.py  metrics_worker.py  normalizer.py  producer.py  prompt_registry.py
ingestion/pipeline/otel/: mapper.py  receiver.py
ingestion/pipeline/writers/: clickhouse.py  timescale.py
ingestion/tests/: conftest.py  test_api_keys.py  test_cost.py  test_normalizer.py  test_otel_mapper.py
landing/: index.html  llms.txt  robots.txt  sitemap.xml
scripts/: start.sh
sdk/python/: README.md  pyproject.toml
sdk/python/amo/: __init__.py  config.py  context.py  decorators.py  emitter.py  package-lock.json
sdk/python/amo/wrappers/: __init__.py  crewai.py  langchain.py  langgraph.py
sdk/python/tests/: conftest.py  test_autopatch.py  test_decorators.py  test_emitter.py  test_models.py
sdk/python/trace_lit/: __init__.py  attribution_graph.py  config.py  context.py  decorators.py  emitter.py  models.py  quickstart.py  span.py
sdk/python/trace_lit/patches/: __init__.py  _anthropic.py  _openai.py
sdk/python/trace_lit/wrappers/: __init__.py  crewai.py  langchain.py  langgraph.py
skills/tracelit-openclaw/: README.md  SKILL.md  package-lock.json  package.json  test-mock.js
skills/tracelit-openclaw/src/: config.js  index.js  tracer.js
storage/clickhouse/migrations/: 001_initial.sql  002_prompt_versioning.sql  003_io_capture.sql
storage/timescale/migrations/: 001_initial.sql  002_alert_rules.sql  003_api_keys_id.sql  004_pending_signups.sql  005_api_keys_email.sql  006_user_auth.sql  007_datasets.sql  008_eval_runs.sql
