[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amo-ingestion"
version = "0.1.0"
description = "AMO ingestion pipeline — Kafka consumer, normalizer, ClickHouse + TimescaleDB writers"
requires-python = ">=3.9"
dependencies = [
    "amo-sdk>=0.1.0",
    "confluent-kafka>=2.0",
    "clickhouse-connect>=0.7",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "eval_type_backport>=0.1.3; python_version < '3.10'",
]

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[project.scripts]
amo-pipeline = "pipeline.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
