[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracelit-ingestion"
version = "0.1.0"
description = "AMO ingestion pipeline — Kafka consumer, normalizer, ClickHouse + TimescaleDB writers"
requires-python = ">=3.9"
dependencies = [
    "Tracelit-SDK>=0.1.0",
    "confluent-kafka>=2.0",
    "clickhouse-connect>=0.7",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "eval_type_backport>=0.1.3; python_version < '3.10'",
    # OTLP/HTTP receiver
    "fastapi>=0.111",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
# Protobuf support for OTLP/HTTP binary encoding (most OTel SDKs default to this)
otlp-proto = [
    "opentelemetry-proto>=1.24",
    "protobuf>=4.25",
]

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[project.scripts]
tracelit-pipeline = "pipeline.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
