[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amo-sdk"
version = "0.1.0"
description = "Agent Monitoring & Observability SDK — instrument AI agents with one decorator"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ai", "agents", "observability", "monitoring", "langchain", "crewai"]
dependencies = [
    "pydantic>=2.0",
    "eval_type_backport>=0.1.3; python_version < '3.10'",
]

[project.optional-dependencies]
kafka = [
    "confluent-kafka>=2.0",
]
langchain = [
    "langchain-core>=0.1",
]
langgraph = [
    "langgraph>=0.1",
    "langchain-core>=0.1",
]
crewai = [
    "crewai>=0.1",
]
# crewai and langgraph have a hard pip conflict — cannot be installed together.
# Use the group that matches your framework.
all-langchain = [
    "amo-sdk[kafka,langchain,langgraph]",
]
all-crewai = [
    "amo-sdk[kafka,langchain,crewai]",  # langchain-core is a crewai dep anyway
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["amo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
strict = true
python_version = "3.9"
